--- a/.classpath
+++ b/.classpath
@@ -25,6 +25,12 @@
 	<classpathentry kind="lib" path="lib/freemarker.jar"/>
 	<classpathentry kind="lib" path="lib/guava-12.0.jar"/>
 	<classpathentry kind="lib" path="lib/pojava-2.8.1.jar"/>
+	<classpathentry kind="lib" path="lib/aws-java-sdk-1.3.14.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/Users/kiran/Downloads/aws-java-sdk-1.3.14/documentation/javadoc/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="lib/commons-codec-1.3.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0">
 		<attributes>
