--- a/.classpath
+++ b/.classpath
@@ -30,6 +30,16 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/commons-codec-1.3.jar"/>
 	<classpathentry kind="lib" path="lib/icu4j-49_1.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-continuation-9.0.0.M2.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-deploy-9.0.0.M2.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-http-9.0.0.M2.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-io-9.0.0.M2.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-security-9.0.0.M2.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-server-9.0.0.M2.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-servlet-9.0.0.M2.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-util-9.0.0.M2.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-webapp-9.0.0.M2.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-xml-9.0.0.M2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0">
 		<attributes>
