--- a/.classpath
+++ b/.classpath
@@ -40,12 +40,8 @@
 	<classpathentry kind="lib" path="lib/jetty-util-9.0.0.M2.jar"/>
 	<classpathentry kind="lib" path="lib/jetty-webapp-9.0.0.M2.jar"/>
 	<classpathentry kind="lib" path="lib/jetty-xml-9.0.0.M2.jar"/>
+	<classpathentry kind="lib" path="lib/servlet-api-3.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0">
-		<attributes>
-			<attribute name="owner.project.facets" value="jst.utility;#system#"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
