--- a/.classpath
+++ b/.classpath
@@ -41,6 +41,7 @@
 	<classpathentry kind="lib" path="lib/jetty-webapp-9.0.0.M2.jar"/>
 	<classpathentry kind="lib" path="lib/jetty-xml-9.0.0.M2.jar"/>
 	<classpathentry kind="lib" path="lib/servlet-api-3.0.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-servlets-9.0.0.M2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6">
