--- a/.classpath
+++ b/.classpath
@@ -43,6 +43,7 @@
 	<classpathentry kind="lib" path="lib/jetty-servlets-9.0.0.M2.jar"/>
 	<classpathentry kind="lib" path="lib/pojava-2.8.1.jar"/>
 	<classpathentry kind="lib" path="lib/imgscalr-lib-4.2.jar"/>
+	<classpathentry kind="lib" path="lib/commons-cli-1.2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0">
