--- a/build.gradle
+++ b/build.gradle
@@ -26,14 +26,22 @@ dependencies {
   compile 'org.pojava:pojava:3.0.2'
 }
 
+task sourceJar(type: Jar) {
+    from sourceSets.main.allJava
+}
+
 publishing {
   publications {
     mavenJava(MavenPublication) {
       groupId 'com.jappyframework'
       artifactId 'jappy-framework'
-      version '1.0'
+      version '1.1'
       
       from components.java
+
+      artifact sourceJar {
+	classifier "sources"
+      }
     }
   }
 }
