--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@
 def isMvnCentral
 group = 'com.jappyframework'
 archivesBaseName = "jappy-framework"
-version = '4.2'
+version = '4.36'
 
 if (hasProperty("mvncentral")) {
     isMvnCentral = mvncentral
@@ -30,6 +30,7 @@ repositories {
 }
 
 dependencies {
+    compile 'org.freemarker:freemarker:2.3.23'
     compile 'com.amazonaws:aws-java-sdk:1.9.16'
     compile 'commons-io:commons-io:2.4'
     compile 'commons-lang:commons-lang:2.6'
