--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@
 def isMvnCentral
 group = 'com.jappyframework'
 archivesBaseName = "jappy-framework"
-version = '4.36'
+version = '4.54'
 
 if (hasProperty("mvncentral")) {
     isMvnCentral = mvncentral
@@ -35,6 +35,7 @@ dependencies {
     compile 'commons-io:commons-io:2.4'
     compile 'commons-lang:commons-lang:2.6'
     compile 'org.apache.httpcomponents:httpclient:4.5.1'
+    compile 'org.apache.httpcomponents:httpmime:4.5.1'
     compile 'commons-dbcp:commons-dbcp:1.4'
     compile 'ch.qos.logback:logback-classic:1.1.2'
     compile 'mysql:mysql-connector-java:5.1.37'
