--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@
 def isMvnCentral
 group = 'com.jappyframework'
 archivesBaseName = "jappy-framework"
-version = '5.2.1'
+version = '5.5.0'
 
 if (hasProperty("mvncentral")) {
     isMvnCentral = mvncentral
@@ -30,6 +30,7 @@ repositories {
 }
 
 dependencies {
+    compile 'joda-time:joda-time:2.9.4'
     compile 'com.google.protobuf:protobuf-java:2.6.1'
     compile 'org.freemarker:freemarker:2.3.23'
     compile 'com.amazonaws:aws-java-sdk:1.9.16'
@@ -51,6 +52,7 @@ dependencies {
     compile 'org.apache.tomcat.embed:tomcat-embed-logging-log4j:8.0.21'
     compile 'org.apache.tomcat.embed:tomcat-embed-websocket:8.0.21'
     compile 'org.apache.tomcat.embed:tomcat-embed-core:8.0.21'
+    compile 'io.dropwizard.metrics:metrics-core:3.1.0'
     testCompile "junit:junit:4.11"  // Or whatever version
 }
 
