--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@
 def isMvnCentral
 group = 'com.jappyframework'
 archivesBaseName = "jappy-framework"
-version = '5.7.11'
+version = '5.7.18'
 
 if (hasProperty("mvncentral")) {
     isMvnCentral = mvncentral
@@ -55,6 +55,7 @@ dependencies {
     compile 'com.googlecode.protobuf-java-format:protobuf-java-format:1.4'
     compile 'io.dropwizard.metrics:metrics-core:3.1.0'
     testCompile "junit:junit:4.11"  // Or whatever version
+    testCompile group: 'com.h2database', name: 'h2', version: '1.4.195'
 }
 
 if (JavaVersion.current().isJava8Compatible()) {
